# GCN-GrabCut

./: .gitignore  README.md  dataset.py  graph_utils.py  inference.py  main.tex  parametric_geom_dataset.py  pyproject.toml  train.py
IoU/: iou.ipynb  iou.py
Preliminaries/: Geometrical_Aspects.md  code.py
notebooks/: test_segmentation.ipynb
src/: bsds_dataset.py  config.py  gcn_models.py  grabcut_ops.py  graph_utils.py  superpixel.py
src/config/: dataset.yaml  grabcut.yaml  logging.yaml  model.yaml  training.yaml
src/gcn_grabcut/: __init__.py  dataset.py  grabcut.py  graph_builder.py  losses.py  metrics.py  model.py  pipeline.py  superpixel.py  trainer.py  visualise.py
tests/: test.py  test_gcn_models.py  test_grabcut_ops.py  test_graph_utils.py  test_superpixel.py
